[package]
name = "personal_banking"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
egui_extras = { version = "0.27", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"

[[bin]]
name = "banking_app"
path = "src/main.rs"